--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
     <meta name="theme-color" content="#020617" />
-    <link rel="icon" type="image/png" href="/tbw-logo.png" />
+
+    <!-- manifest + ikona -->
     <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/png" href="/tbw-logo.png" />
   </head>
   <body>
     <div id="root"></div>
