--- a/index.html
+++ b/index.html
@@ -1,18 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="hr">
-  <head>
-    <meta charset="UTF-8" />
-    <title>TBW AI PREMIUM NAVIGATOR</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover"
-    />
-    <meta name="theme-color" content="#020617" />
-    <link rel="icon" type="image/png" href="/tbw-logo.png" />
-    <link rel="manifest" href="/manifest.json" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>TBW AI PREMIUM NAVIGATOR</title>
+
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1, viewport-fit-cover" />
+
+  <meta name="theme-color" content="#020617" />
+
+  <!-- TBW LOGO ICONS -->
+  <link rel="icon" type="image/png" href="/tbw-logo.png" />
+  <link rel="manifest" href="/manifest.json" />
+
+  <!-- MAIN CSS -->
+  <link rel="stylesheet" href="/styles.css" />
+
+  <!-- HERO IMAGES PRELOAD -->
+  <link rel="preload" as="image" href="/hero-paris-desktop.jpg">
+  <link rel="preload" as="image" href="/hero-paris-mobile.jpg">
+
+  <!-- INTRO VIDEO PRELOAD -->
+  <link rel="preload" as="video" href="/intro.mp4">
+</head>
+
+<body>
+  <!-- INTRO OVERLAY -->
+  <div id="introOverlay">
+    <video id="introVideo" autoplay muted playsinline>
+      <source src="/intro.mp4" type="video/mp4" />
+    </video>
+  </div>
+
+  <!-- ROOT -->
+  <div id="root"></div>
+
+  <!-- MAIN APP -->
+  <script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
